Fix image slideshow overlapping content below

--- a/styles.scss
+++ b/styles.scss
@@ -222,6 +222,7 @@ body {
 		.slide-show {
 			margin: 40px 0px;
 			height: 480px;
+			display: inline;
 
 			.slide-show-image-col {
 				text-align: center;
